History
=======

Version 0.6.5 - unreleased
--------------------------

Version 0.6.4 - 2008-10-29
--------------------------

- Added optional checking for channel attr 'sendable' to
  channel_lookup. Sending of a content item from the
  sendnewsletter view in dancing uses this feature, to be able
  to supress some channels. Also added vocabularies that contain
  only sendable or only subscribeable channels.
  [tmog]

- Relabelled buttons on the stats page to use the term 'clear' rather
  than 'flush'. Also renamed related handlers and method. [russf]


Version 0.6.3 - 2008-09-11
--------------------------

- Register the SubscriptionSearchableText adapter so that the fulltext
  index is actually populated. [nouri]

Version 0.6.2 - 2008-09-03
--------------------------

- Add 'headers' argument to ``mail.create_html_mail`` to allow the
  injection of more e-mail headers. [nouri]

Version 0.6.1 - 2008-08-28
--------------------------

- Add zope.sendmail as a dependency so that we get the latest and
  greates release. [nouri]

- IMailDelivery expects ``toaddrs`` to be a list of addresses. [nouri]

- Use DumbWriters word wrapping to ensure that no text line
  is longer than plain_text_maxcols characters. [saily]

- Using HTMLParser.anchorlist to append all links found in 
  a message at the bottom of the text/plain message. [saily]

Version 0.6.0 - 2008-08-21
--------------------------

- Moved 'singing.scheduler.assemble_messages' and 'render_message'
  into their own IMessageAssemble adapter (on channel).  This allows
  for easier hooking into these policy-riddled functions to make them
  work differently for different types of channels.  Also, added a
  small flag that allows to ignore the subscriber's 'cue' completely.
  [nouri]

Version 0.5.0 - 2008-07-29
--------------------------

- Start depending on plone.z3cform>=0.3dev
  [nouri]

Version 0.4 - 2008-07-23
------------------------

- Added optional checking for channel attr 'subscribeable' to